--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
   "repositories": {
     "local": {
       "type": "path",
-      "url": "./packages/*",
+      "url": "/tmp/packages/*",
       "options": {
         "symlink": true,
         "versions": {
