--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,14 @@
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
     ]
+  },
+  "repositories": {
+    "local": {
+      "type": "path",
+      "url": "./packages/*",
+      "options": {
+        "symlink": true
+      }
+    }
   }
 }
