--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
-    "craftcms/generator": "^1.3.0",
+    "craftcms/generator": "2.0.x-dev",
     "yiisoft/yii2-shell": "^2.0.3"
   },
   "autoload": {
@@ -36,8 +36,8 @@
       "options": {
         "symlink": true,
         "versions": {
-          "craftcms/cms": "4.6.1",
-          "craftcms/cloud": "1.32.0"
+          "craftcms/cms": "5.0.0-alpha.6",
+          "craftcms/cloud": "1.32.1"
         }
       }
     }
