--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
-    "craftcms/cms": "^4.6.1",
-    "craftcms/cloud": "^1.32.0",
+    "craftcms/cms": "@dev",
+    "craftcms/cloud": "@dev",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
@@ -28,5 +28,18 @@
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
     ]
+  },
+  "repositories": {
+    "local": {
+      "type": "path",
+      "url": "/tmp/packages/*",
+      "options": {
+        "symlink": true,
+        "versions": {
+          "craftcms/cms": "4.6.1",
+          "craftcms/cloud": "1.32.0"
+        }
+      }
+    }
   }
 }
