--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,13 @@
   "scripts": {
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
-    ],
-    "pre-update-cmd": [
-      "mkdir -p /tmp/packages"
     ]
   },
   "repositories": {
     "local": {
       "type": "path",
-      "url": "/tmp/packages/*",
+      "url": "./.ddev/craft-cloud/packages/*",
       "options": {
-        "reference": "none",
         "symlink": true,
         "versions": {
           "craftcms/cms": "4.6.1",
