--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
       "url": "./.ddev/craft-cloud/packages/*",
       "options": {
         "symlink": true,
+        "reference": "none",
         "versions": {
           "craftcms/cms": "4.6.1",
           "craftcms/cloud": "1.32.0"
