--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "symlink": true,
         "versions": {
           "craftcms/cms": "5.0.0-alpha.6",
-          "craftcms/cloud": "1.32.1"
+          "craftcms/cloud": "2.x-dev"
         }
       }
     }
