--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1705627485
+dateModified: 1706027659
 email:
   fromEmail: tim@craftcms.com
   fromName: 'Craft 4 Project'
@@ -8,8 +8,13 @@ meta:
     1c4db2bd-b409-4bf2-a56e-c3327f0b160e: 'Craft 4 Project' # Craft 4 Project
     81a6b84b-4e06-4828-a256-d2d537885644: Common # Common
     283a253c-a365-4823-89c4-b48fbd2232a3: 'Craft 4 Project' # Craft 4 Project
+plugins:
+  freeform:
+    edition: express
+    enabled: true
+    schemaVersion: 5.0.21
 system:
-  edition: solo
+  edition: pro
   live: true
   name: 'Craft 4 Project'
   schemaVersion: 4.5.3.0
