--- a/php/conf.d/php.ini
+++ b/php/conf.d/php.ini
@@ -1,1 +1,4 @@
-highlight.html=#FFFFFF
+[Date]
+; Defines the default timezone used by the date functions
+; http://php.net/date.timezone
+date.timezone="America/New_York"
