--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,8 @@
 {
   "require": {
-    "craftcms/cms": "@dev",
-    "craftcms/cloud": "@dev",
+    "craftcms/cms": "^4.6.1",
+    "craftcms/cloud": "^1.33.0",
     "vlucas/phpdotenv": "^5.4.0"
-  },
-  "require-dev": {
-    "craftcms/generator": "^1.3.0",
-    "yiisoft/yii2-shell": "^2.0.3"
   },
   "autoload": {
     "psr-4": {
