--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -3,7 +3,7 @@ type: craftcms
 docroot: web
 php_version: "8.2"
 webserver_type: nginx-fpm
-xdebug_enabled: false
+xdebug_enabled: true
 additional_hostnames: []
 additional_fqdns: []
 database:
