--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,15 +1,39 @@
-dateModified: 1705627485
+dateModified: 1706711550
 email:
   fromEmail: tim@craftcms.com
   fromName: 'Craft 4 Project'
-  transportType: craft\mail\transportadapters\Sendmail
+  replyToEmail: null
+  template: ''
+  transportSettings:
+    host: $SMTP_HOSTNAME
+    password: $SMTP_PASSWORD
+    port: $SMTP_PORT
+    useAuthentication: '1'
+    username: $SMTP_USERNAME
+  transportType: craft\mail\transportadapters\Smtp
+fs:
+  testCloudFs:
+    hasUrls: false
+    name: 'Test Cloud FS'
+    settings:
+      expires: '1 years'
+      localFsPath: '@webroot/craft-cloud'
+      localFsUrl: '@web/craft-cloud'
+      subpath: test
+    type: craft\cloud\fs\AssetsFs
 meta:
   __names__:
     1c4db2bd-b409-4bf2-a56e-c3327f0b160e: 'Craft 4 Project' # Craft 4 Project
+    7ccacf5c-0e1d-47b9-a681-52816c20f564: 'Test Volume' # Test Volume
     81a6b84b-4e06-4828-a256-d2d537885644: Common # Common
     283a253c-a365-4823-89c4-b48fbd2232a3: 'Craft 4 Project' # Craft 4 Project
+plugins:
+  freeform:
+    edition: express
+    enabled: true
+    schemaVersion: 5.0.21
 system:
-  edition: solo
+  edition: pro
   live: true
   name: 'Craft 4 Project'
   schemaVersion: 4.5.3.0
