--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,40 @@
 {
   "require": {
-    "craftcms/cloud": "^1.32.1",
-    "craftcms/cms": "^4.6.1",
+    "craftcms/aws-s3": "2.0.3",
+    "craftcms/cloud": "^1.32.0",
+    "craftcms/cms": "4.6.1",
+    "craftcms/feed-me": "5.3.0",
+    "craftcms/redactor": "3.0.4",
+    "doublesecretagency/craft-inventory": "3.1.1",
+    "marionnewlevant/twig-perversion": "^3.0",
+    "mmikkel/cp-field-inspect": "^1.4",
+    "mmikkel/incognito-field": "^1.3",
+    "nystudio107/craft-autocomplete": "^1.10",
+    "nystudio107/craft-emptycoalesce": "^4.0",
+    "nystudio107/craft-retour": "^4.1",
+    "nystudio107/craft-seomatic": "4.0.37",
+    "putyourlightson/craft-blitz": "4.10.3",
+    "putyourlightson/craft-elements-panel": "^2.0",
+    "putyourlightson/craft-sherlock": "4.4.1",
+    "spacecatninja/imager-x": "4.2.4",
+    "spatie/craft-ray": "^2.0",
+    "spicyweb/craft-embedded-assets": "3.2.0",
+    "topshelfcraft/environment-label": "4.0.3",
+    "topshelfcraft/wordsmith": "4.4.0",
+    "vaersaagod/matrixmate": "2.1.4",
+    "venveo/craft-bulkedit": "^4.0",
+    "verbb/expanded-singles": "2.0.5",
+    "verbb/formie": "2.1.2",
+    "verbb/hyper": "1.1.19",
+    "verbb/navigation": "2.0.24",
+    "verbb/smith": "^2.0",
+    "verbb/super-table": "3.0.12",
+    "verbb/tablemaker": "4.0.7",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
-    "craftcms/generator": "^1.3.0",
+    "craftcms/generator": "^1.0",
+    "markhuot/craft-pest": "dev-master as 1.0.0-alpha12",
     "yiisoft/yii2-shell": "^2.0.3"
   },
   "autoload": {
@@ -16,17 +45,25 @@
   "config": {
     "allow-plugins": {
       "craftcms/plugin-installer": true,
-      "yiisoft/yii2-composer": true
+      "yiisoft/yii2-composer": true,
+      "pestphp/pest-plugin": true
     },
     "sort-packages": true,
     "optimize-autoloader": true,
     "platform": {
-      "php": "8.2"
+      "php": "8.1.0"
     }
   },
   "scripts": {
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
     ]
-  }
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://composer.craftcms.com",
+      "canonical": false
+    }
+  ]
 }
