--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
       "options": {
         "symlink": true,
         "versions": {
-          "craftcms/cms": "5.0.0-alpha.6",
+          "craftcms/cms": "5.0.0-beta",
           "craftcms/cloud": "2.x-dev"
         }
       }
