--- a/.github/workflows/craft-cloud-deploy.yml
+++ b/.github/workflows/craft-cloud-deploy.yml
@@ -33,9 +33,9 @@ jobs:
           git config user.name "shinybrad"
           git config user.email "shinybrad@users.noreply.github.com"
 
-      - name: Update ${{ github.ref }}-cloud Branch
+      - name: Update ${{ github.ref_name }}-cloud Branch
         run: |
-          git checkout -B ${{ github.ref }}-cloud
+          git checkout -B ${{ github.ref_name }}-cloud
           git add composer.json composer.lock
           git commit -m "Update composer dependencies"
-          git push origin ${{ github.ref }}-cloud --force
+          git push origin ${{ github.ref_name }}-cloud --force
