--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
-    "craftcms/cms": "@dev",
-    "craftcms/cloud": "@dev",
+    "craftcms/cms": "4.8.x-dev",
+    "craftcms/cloud": "1.x-dev",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
@@ -34,11 +34,7 @@
       "type": "path",
       "url": "/tmp/packages/*",
       "options": {
-        "symlink": true,
-        "versions": {
-          "craftcms/cms": "4.6.1",
-          "craftcms/cloud": "1.33.0"
-        }
+        "symlink": true
       }
     }
   }
