--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,15 +1,50 @@
-dateModified: 1705627485
+dateModified: 1708095425
 email:
   fromEmail: tim@craftcms.com
   fromName: 'Craft 4 Project'
-  transportType: craft\mail\transportadapters\Sendmail
+  replyToEmail: null
+  template: ''
+  transportSettings:
+    host: $SMTP_HOSTNAME
+    password: $SMTP_PASSWORD
+    port: $SMTP_PORT
+    useAuthentication: '1'
+    username: $SMTP_USERNAME
+  transportType: craft\mail\transportadapters\Smtp
+fs:
+  privateFs:
+    hasUrls: false
+    name: 'Private FS'
+    settings:
+      expires: '1 years'
+      localFsPath: '@webroot/uploads'
+      localFsUrl: '@web/uploads'
+      subpath: private-fs-subpath
+    type: craft\cloud\fs\AssetsFs
+  publicFs:
+    hasUrls: true
+    name: 'Public FS'
+    settings:
+      expires: '1 years'
+      localFsPath: '@webroot/uploads'
+      localFsUrl: '@web/uploads'
+      subpath: public-fs-subpath
+    type: craft\cloud\fs\AssetsFs
 meta:
   __names__:
     1c4db2bd-b409-4bf2-a56e-c3327f0b160e: 'Craft 4 Project' # Craft 4 Project
+    7ccacf5c-0e1d-47b9-a681-52816c20f564: 'Public Volume' # Public Volume
+    32e5ca18-1539-4832-b094-498a728bd57d: 'Private Volume' # Private Volume
     81a6b84b-4e06-4828-a256-d2d537885644: Common # Common
     283a253c-a365-4823-89c4-b48fbd2232a3: 'Craft 4 Project' # Craft 4 Project
+    e847f176-16bf-4722-9bed-ee3d591ed3cb: 'Public Schema' # Public Schema
+plugins:
+  sprig:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.1
 system:
-  edition: solo
+  edition: pro
   live: true
   name: 'Craft 4 Project'
   schemaVersion: 4.5.3.0
