--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "require": {
     "craftcms/cloud": "1.x-dev",
     "craftcms/cms": "4.8.x-dev",
+    "craftcms/commerce": "dev-develop as 4.4.1",
     "putyourlightson/craft-sprig": "^2.7",
     "vlucas/phpdotenv": "^5.4.0"
   },
