--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "craftcms/cms": "4.8.x-dev",
+    "craftcms/cms": "dev-bugfix/cloud-uploader as 4.8",
     "craftcms/cloud": "1.x-dev",
     "vlucas/phpdotenv": "^5.4.0"
   },
